Bug #5322
closedtree connect from Windows 7 fails
100%
Description
Network capture shows Windows 7 attempting an NtCreate (open) using a combination of user ID (UID) and tree ID (TID) that are not related in the usual way (normally TIDs are valid only under a specific UID).
We fail the request with "invalid TID".
Updated by Gordon Ross over 8 years ago
11/9/2012
It turns out that we have a long-standing defect in our handling of connected trees identifiers (TID), and that a recent Windows 7 update has exposed this defect in a highly visible way. In our implementation TIDs are only valid in/with the user context identifier (UID) with which they were created. That has worked for ages, but the protocol specifications were unclear about whether TIDs should work with any UID or only the UID they were created with.
It turns out that as of the latest Windows 7 update, TIDs are expected to work with any UID, meaning that the UID and TID number spaces are orthogonal, NOT a hierarchy as previously believed.
In our implementation, this will require moving the collection of valid TIDs (and associated tree connections) "up a level" in the data structure hierarchy, moving them from the "User" object to the "session" object.
Updated by Electric Monk over 8 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 3b13a1ef7511135ec0c75b5f94de8075454efd79
commit 3b13a1ef7511135ec0c75b5f94de8075454efd79 Author: Thomas Keiser <thomas.keiser@nexenta.com> Date: 2015-02-13T04:50:09.000Z 5322 tree connect from Windows 7 fails Reviewed by: Gordon Ross <gwr@nexenta.com> Reviewed by: Bayard Bell <bayard.bell@nexenta.com> Approved by: Dan McDonald <danmcd@omniti.com>