5322 tree connect from Windows 7 fails Reviewed by: Gordon Ross <gwr@nexenta.com> Reviewed by: Bayard Bell <bayard.bell@nexenta.com> Approved by: Dan McDonald <danmcd@omniti.com>